Bug 1958695 - Don't destroy layer manager of temporarily hidden Wayland popup. r=stransky

Destroying the popup's layer manager ends up also destroying all the
child WebRender bridges.

The WRBridge for the remote content is destroyed with some pending
transactions that aren't sent back to the content process.

Even if they were, the content process will end up being disconnected
after all / nothing re-creates the PuppetWidget's renderer.

So I think the code is just not set up to survive a LayerManager
destruction while keeping rendering of remote contents working.

There's no good reason to clear these, too, they're likely to be shown
right after.

Differential Revision: https://phabricator.services.mozilla.com/D247899